apps/services/zipline/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zipline
  labels:
    name: zipline
    app.kubernetes.io/name: zipline
    app.kubernetes.io/part-of: services
