apps/services/zipline/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipline
  namespace: zipline
  labels:
    app: zipline
    app.kubernetes.io/name: zipline
    app.kubernetes.io/part-of: services
    app.kubernetes.io/component: server
  annotations:
    secret.reloader.stakater.com/reload: "zipline-creds"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zipline
  template:
    metadata:
      labels:
        app: zipline
        app.kubernetes.io/name: zipline
        app.kubernetes.io/part-of: services
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: zipline
          image: ghcr.io/diced/zipline:4.7.0
          ports:
            - containerPort: 3000
              name: http
          startupProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"
          volumeMounts:
            - mountPath: /zipline/uploads
              name: uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: zipline-uploads
